# mcospkg

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  build.sh  install.sh  main.py  mcospkg-mirror.py  mcospkg.py
Doc/Chinese/: 关于库.md  需求.md
Doc/English/: Library.md
clib/manage/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
clib/manage/include/: Extract.h  pmio.h
clib/manage/src/: ExtractLinux.c  TextAttributes.c  main.c  pmio.c
docs/Chinese/: 关于库.md
docs/English/: Library.md  Requirements.md
etc/mcospkg/: repo.conf
etc/mcospkg/database/remote/: REPOINFO.json
include/: Extract.h  README.md  TextAttributes.h  pmio.h  sha256.h
modules/: fetch.py  file.py  preset.py
pymodules/: color.py  file.py  pgb.py  preset.py
src/: ExtractLinux.c  README.md  TextAttributes.c  config.rs  info.rs  lib.rs  main.c  main.rs  mirror.rs  package.rs  pmio.c  sha256.c
src/clib/manage/: CMakeLists.txt
src/clib/manage/include/: pmio.h
src/clib/manage/src/: ExtractLinux.c  TextAttributes.c  main.c  pmio.c
src/lib/: file.rs  preset.rs
src/main/: install.rs  remove.rs
src/manage/: CMakeLists.txt
src/manage/include/: TextAttributes.h  pmio.h
src/manage/src/: ExtractLinux.c  TextAttributes.c  main.c  pmio.c
src/mirror/: add.rs  update.rs
src/pkgmgr/: install.rs  mod.rs  remove.rs
tests/: struct_package.rs
