[package]
name = "mcospkg"
version = "0.1.1"
authors = ["zhangxuan2011 <zx20110412@outlook.com>", "RainyHowCool <rainyhowcool@outlook.com>"]
edition = "2021"

[package.metadata]
license = "GPL-3.0"
repository = "https://github.com/zhangxuan2011/mcospkg"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colored = "3.0.0"
indicatif = "0.17.9"
libc = "0.2.169"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"

[build-dependencies]
cc = "1.2.10"

# This is the binary file define area
# The file format: mcospkg-xxx
# Filename: src/xxx.rs
[[bin]]
name = "mcospkg-mirror"
path = "src/mirror.rs"

[[bin]]
name = "mcospkg-info"
path = "src/info.rs"
