[package]
name = "mcospkg"
version = "0.9.1"
authors = ["zhangxuan2011 <zx20110412@outlook.com>", "RainyHowCool <rainyhowcool@outlook.com>"]
edition = "2024"

[package.metadata]
license = "GPL-3.0"
repository = "https://github.com/zhangxuan2011/mcospkg"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
hex = "0.4.3"
indicatif = "0.17.9"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
sha2 = "0.10.8"
tar = "0.4.44"
toml = "0.8.20"
xz2 = "0.1.7"

# And library define area.
# This library can uses in C and Rust.
[lib]
name = "mcospkg"
crate-type = ["cdylib", "rlib"]

# This is the binary file define area
# The file format: mcospkg-xxx
# Filename: src/xxx.rs
[[bin]]
name = "mcospkg-mirror"
path = "src/mirror.rs"

[[bin]]
name = "mcospkg-info"
path = "src/info.rs"

[[bin]]
name = "mcospkg-package"
path = "src/package.rs"

# Optimize options
[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
panic = "abort"
